out/old/manifests/feedback360/Deployment.feedback360-frontend.yaml
metadata:
  name: feedback360-frontend
  namespace: feedback360
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"feedback360:feedback360-fe-service","ingressName":"feedback360:feedback360","hostname":"feedback360.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback360-frontend
  template:
    metadata:
      labels:
        app: feedback360-frontend
    spec:
      containers:
      - name: feedback360-fe
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/feedback360/frontend/frontend_4:latest
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: jfrog-registry-secret
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
