out/old/manifests/feedback360/Service.feedback360-fe-service.yaml
metadata:
  name: feedback360-fe-service
  namespace: feedback360
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: feedback360-frontend
  clusterIP: <IP_69>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
