out/old/manifests/feedback360/Service.postgresql-service.yaml
metadata:
  name: postgresql-service
  namespace: feedback360
spec:
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: postgresql
  clusterIP: <IP_70>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
